--- a/skeleton/head_section_example_recipe.html
+++ b/skeleton/head_section_example_recipe.html
@@ -32,7 +32,7 @@
   <aside>
     <h2 id="ingredients">Ingredients</h2>
 
-    <ul>
+    <ul class="Ingredients-List">
       <li>1 tbsp olive oil</li>
       <li>1/2 medium brown or white onion, peeled and diced</li>
       <li>1 clove garlic, minced</li>
@@ -68,7 +68,7 @@
     </p>
 
     <h2 id="directions">Directions</h2>
-    <ol>
+    <ol class="Directions">
       <li>
         Heat a deep, large skillet or saut&eacute; pan on medium. Slowly warm olive oil in the pan. Add chopped onion, saut&eacute; for a few minutes until the onion begins to soften. Add garlic and continue to saut&eacute; till mixture is fragrant.
       </li>
